<resources>
    <string name="app_name">NannyMeals</string>
    <string name="action_list">List of meals</string>
    <string name="action_delete">Delete selected day</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="action_delete_all">Delete all meals</string>
    <string name="search">Search</string>
    <string name="plat_principal">Main course?</string>
    <string name="fromage">Cheese?</string>
    <string name="dessert">Pudding?</string>
    <string name="gouter">Snack?</string>
    <string name="Removed">Removed</string>
    <string name="deleteAll">Delete all meals</string>
    <string name="deleteConfirm">Do you really want to delete?</string>
    <string name="deleteSingle">Delete a meal</string>
    <string name="saved">Saved</string>
    <string name="statistics">Statistics</string>
    <string name="display_statistics">Display statistics</string>
    <string name="mainCourse_dropDown">Main course</string>
    <string name="cheese_dropDown">Cheese</string>
    <string name="pudding_dropDown">Pudding</string>
    <string name="snck_dropDown">Snack</string>
    <string name="times">" time(s)"</string>
    <string name="periode">computed on period of</string>
    <string name="categorie">Category</string>
    <string name="oneMonth">1 month</string>
    <string name="sixMonth">6 months</string>
    <string name="threeMonth">3 months</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="share">Share</string>
    <string name="shareBody">at Nanny\'s, one could eat:</string>
    <string name="shareBodyStart">Today (</string>
    <string name="shareBodyStartAny">"On "</string>
</resources>
