<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.batsalle.nannymeals.activity.main.MainActivity">
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="101"
        android:title="@string/action_delete" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="102"
        android:title="@string/action_delete_all" />

    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="collapseActionView" />
</menu>
